// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizes empty configuration 1`] = `
Urc {
  "babelPlugins": Array [],
  "babelPresets": Array [],
  "devServerHistoryFallback": false,
  "environmentVariables": Array [],
  "htmlSource": "/Users/kushanjoshi/code/open/underreact/underreact.config.js/src/html.js",
  "jsEntry": "/Users/kushanjoshi/code/open/underreact/underreact.config.js/src/entry.js",
  "outputDirectory": "/Users/kushanjoshi/code/open/underreact/underreact.config.js/_underreact-site",
  "polyfills": Object {
    "fetch": false,
    "objectAssign": false,
    "promise": false,
  },
  "port": 8080,
  "postcssPlugins": Array [],
  "production": undefined,
  "publicAssetsPath": "/underreact-assets",
  "publicDirectory": "/Users/kushanjoshi/code/open/underreact/underreact.config.js/public",
  "rootDirectory": "/Users/kushanjoshi/code/open/underreact/underreact.config.js",
  "siteBasePath": "",
  "stats": undefined,
  "stylesheets": Array [],
  "vendorModules": Array [],
  "webpackConfigTransform": [Function],
  "webpackLoaders": Array [],
  "webpackPlugins": Array [],
}
`;

exports[`normalizes fancy configuration 1`] = `
Urc {
  "babelPlugins": Array [
    "/babel-plugin-lodash",
  ],
  "babelPresets": Array [],
  "devServerHistoryFallback": false,
  "environmentVariables": Array [
    "ENV_VAR",
  ],
  "htmlSource": "/Users/kushanjoshi/code/open/underreact/lib/src/index.html",
  "jsEntry": "/Users/kushanjoshi/code/open/underreact/underreact.config.js/src/entry.js",
  "outputDirectory": "/Users/kushanjoshi/code/open/underreact/underreact.config.js/_underreact-site",
  "polyfills": Object {
    "fetch": true,
    "objectAssign": false,
    "promise": true,
  },
  "port": 8080,
  "postcssPlugins": Array [],
  "production": undefined,
  "publicAssetsPath": "/cacheable-things",
  "publicDirectory": "/Users/kushanjoshi/code/open/underreact/underreact.config.js/public",
  "rootDirectory": "/Users/kushanjoshi/code/open/underreact/underreact.config.js",
  "siteBasePath": "/fancy",
  "stats": undefined,
  "stylesheets": Array [
    "/Users/kushanjoshi/code/open/underreact/lib/src/bg.css",
  ],
  "vendorModules": Array [],
  "webpackConfigTransform": [Function],
  "webpackLoaders": Array [
    Object {
      "test": /\\\\\\.less\\$/,
      "use": Array [
        "css-loader",
        "less-loader",
      ],
    },
  ],
  "webpackPlugins": Array [
    [Function],
  ],
}
`;
